--- a/fhir-swagger-generator/pom.xml
+++ b/fhir-swagger-generator/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>fhir-search</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>1.1.5</version>
+        </dependency>
     </dependencies>
 
     <build>
